test/spec_vectors/data/ok/module_10.wat
(module (memory 1) (global $g i32 (i32.const 0)) (data (global.get $g) "a"))