test/spec_vectors/data/fail/module_61.wat
(module (global $g (import "test" "g") (mut i32)) (memory 1) (data (global.get $g)))